<resources>
    <string name="app_name">Jet2Travel</string>
    <string name="action_settings">Settings</string>
    <string name="employee_title">Employee</string>
    <string name="employee_details">Employee Details</string>
    <string name="api_error">Getting error in Api</string>
    <string name="delete">Delete</string>
    <string name="alert">Alert</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="exit_alert_message">Are you sure you want to exit?</string>
    <string name="delete_alert_message">Are you sure you want to delete?</string>
    <string name="name">Name:</string>
    <string name="salary">Salary:</string>
    <string name="employee_id">Employee Age:</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_age">Sort by age</string>
</resources>
