<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/bg_dialog_border">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/alert"
        android:textColor="@color/black_d"
        android:textSize="@dimen/sp_19_2" />

    <TextView
        android:id="@+id/txt_dialog_alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_below="@+id/txt_dialog_title"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/greyish_brown" />

    <ImageView
        android:id="@+id/ref_center_vertical_view"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_1"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_alignParentBottom="true"
        android:weightSum="2">


        <TextView
            android:id="@+id/txt_disagree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/selector_text_view"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_13_4" />

        <Button
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/btn_save_selector"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15_4" />


    </LinearLayout>


</RelativeLayout>