<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_employee_profile_large"
        android:layout_margin="@dimen/dp_5"
        android:layout_width="250dp"
        android:layout_height="@dimen/dp_200"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/img_larg_employee" />

    <TextView
        android:id="@+id/txt_employee_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_employee_profile_large"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/name"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_employee_profile_large"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@+id/txt_employee_name_label" />


    <TextView
        android:id="@+id/txt_employee_salary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_employee_name"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/salary"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_employee_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_employee_name"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@+id/txt_employee_salary_label" />

    <TextView
        android:id="@+id/txt_employee_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_employee_salary_label"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/employee_id"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_employee_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_employee_salary_label"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@+id/txt_employee_id_label" />

</RelativeLayout>